--- a/gestionhotel/pom.xml
+++ b/gestionhotel/pom.xml
@@ -159,7 +159,14 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.2.4.Final</version>
-		</dependency>    
+		</dependency>
+		<!-- MysqlConnector -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
+		
 	</dependencies>
     <build>
         <plugins>
